--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       { 
         id: "mB1TRPbdInw", 
         title: "Test1", 
-        channel: "BliBlue", 
+        channel: "BliBlue ✓", 
         description: "Este é um vídeo de teste para o BliBlue. (Youtube Teste)"
       },
       { 
         id: "EW41mBzvCVQ", 
         title: "Gatinho fofo", 
-        channel: "Bonyy", 
+        channel: "Bonyy ✓", 
         description: "Gatinhos engraçados"
       },
     ];
@@ -203,6 +203,7 @@
 
 </body>
 </html>
+
 
 
 
