--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
   <header>
     <span onclick="goHome()">BliBlue</span>
-    <a href="https://forms.gle/z5dZXhAaPgLAziw59" target="_blank" class="publish-btn">Publicar vídeo</a>
+    <a href="https://forms.gle/z5dZXhAaPgLAziw59" target="_blank">
+        <img src="botao-publicar.png" alt="Publicar vídeo" class="publish-btn" width="150">
+    </a>
   </header>
 
   <div id="app"></div>
