--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <header>
     <span onclick="goHome()">BliBlue</span>
     <a href="https://forms.gle/z5dZXhAaPgLAziw59" target="_blank">
-        <img src="upload_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.png" alt="Publicar vídeo" class="publish-btn" width="150">
+        <img src="upload_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.png" width="33">
     </a>
   </header>
 
@@ -205,7 +205,6 @@
 
 </body>
 </html>
-
 
 
 
